# bayesian-inference

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .ruff.toml  Dockerfile  README.md  bnn_geotech.py  bnn_predict.py  bnn_train.py  confusion_matrix.py  docker_entrypoint.sh  join.bash  join_predictions.py  oceans-h16-direct-M4.slurm  oceans-h16-residual-M3.slurm  oceans-h64-direct-M4.slurm  oceans-h64-residual-M3.slurm  predict.bash  predict.slurm  pyproject.toml  reconstruct.bash  requirements.txt  setup.py  sort.bash  summary_jobs.bash  template.slurm  train.bash  train.slurm
.github/workflows/: bnn_inference.yml  docker.yml  docker_image.yml  pylint.yml  python-app.yml
blitz.old/examples/: bayesian_regression_boston.py
blitz.old/modules/: weight_sampler.py
blitz/examples/: bayesian_regression_boston.py  stocks-blstm.ipynb
blitz/examples/.ipynb_checkpoints/: stocks-blstm-checkpoint.ipynb
blitz/utils/: variational_estimator.py
bnn_inference/: __init__.py  bnn_predict.py  bnn_train.py  join_predictions.py
bnn_inference/submodules/blitz/: .gitignore  README.md
bnn_inference/tools/: __init__.py  bnn_configuration.py  bnn_model.py  console.py  dataloader.py  parser.py  predictor.py  utilities.py  visualisation.py
data/: .~lock.koyo-20181121-model-21-output.xls#  koyo-20181121-model-29-output.xls  koyo-20181126-model-21-output.xls  koyo-20181126-model-26-output.xls  koyo-20181126-model-29-output.xls  koyo-20181129-model-26-output.xls  test_regression_dataset.xls
data/test_dataset/: x_10_sin4x_sin2x_N01.csv
data/x-models/: koyo-20181121-model-21-output.xls  koyo-20181121-model-26-output.xls  koyo-20181129-model-21-output.xls  koyo-20181129-model-29-output.xls
environment/: blitz.yaml  blitz_202110.yaml  blitz_202211.yaml  blitz_pc.yaml  iridis.setup.txt  requirements.txt
iridis/: join.bash  predict.bash  reconstruct.bash  sort.bash  summary_jobs.bash  template.slurm  train.bash
iridis/jobs/: ijrr-h16-direct-M3-XS.slurm  ijrr-h64-direct-M3-X12.slurm  ijrr-h64-direct-M3-XE.slurm  ijrr-h64-direct-M3.slurm  ijrr-test.slurm  oceans-h16-direct-M3.slurm  oceans-h16-direct-M4.slurm  oceans-h16-residual-M3.slurm  oceans-h64-direct-M3.slurm  oceans-h64-direct-M4.slurm  oceans-h64-residual-M3.slurm
iridis/scripts/: id2latent.bash  id2path.bash  id2target.bash  id2train.bash  list_id.sh  parse_id.bash
jobs/: ijrr-h16-direct-M3-XE.slurm  ijrr-h16-direct-M3.slurm  ijrr-h64-direct-M3-XE9.slurm  ijrr-h64-direct-M3-XS.slurm  oceans-h16-residual-M4.slurm  oceans-h64-residual-M4.slurm
jobs/old/: serial-h16-residual-M3.slurm  train-bnn.slurm
results/test_xvalid_error_vs_epoch/: bnn_geotech.py
scripts/: find_id.sh  id2latent.bash  id2path.bash  id2target.bash  id2train.bash  list_id.sh  list_maps.bash  parse_id.bash
scripts/iridis/: join.bash  predict.slurm  reconstruct.bash  template.slurm  train.slurm
src/bnn_inference/: __init__.py  bnn_train.py  cli.py  join_predictions.py  predict.py  train.py  version.py
src/bnn_inference/tools/: __init__.py  (+7 more)
src/tools/: bnn_model.py  confusion_matrix.py
tools/: bnn_configuration.py  bnn_model.py  console.py  dataloader.py  parser.py  predictor.py  visualisation.py
(+38 files in other folders)
