[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnn_inference"
version = "0.0.9"
description = "Bayesian NN training/inference engine to learn mappings between latent representations of low-resolution maps and high-resolution maps"
authors = ["Jose Cappelletto <j.cappelletto@soton.ac.uk>"]
license = "GPLv3"
homepage = "https://github.com/cappelletto/bayesian_inference"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.dependencies]
python = ">=3.6"
blitz-bayesian-pytorch = "0.2.7"
numpy = ">=1.19.0"
pandas = ">=0.25.3"
torch = ">=1.7.0"
torchvision = ">=0.8.1"
scikit-learn = ">=0.23.1"
Pillow = ">=9.1.1"
scipy = ">=1.5.0"
typer = ">=0.7.0"
pyyaml = "*"

[tool.console_scripts]
bnn_inference = "bnn_inference.cli:main"
